# OnlyJobless

./: .coveragerc  .flake8  .gitignore  CODEOWNERS  README.md  mypy.ini
.github/workflows/: test.yml
docs/: pytest.ini  requirements.txt
project send/: Dockerfile  docker-compose.yml  requirements.txt
project send/backend/: alembic.ini  pyproject.toml  pytest.ini
project send/backend/alembic/: env.py
project send/backend/alembic/versions/: 01d883cc338a_init.py  f721da226e34_init.py
project send/backend/app/: main.py
project send/backend/app/auth/: deps.py  jwt.py  passwords.py  router.py  schemas.py  security.py
project send/backend/app/chat/: limits.py  repository.py  router.py  schemas.py  service.py  utils.py
project send/backend/app/core/: config.py
project send/backend/app/db/: deps.py  models.py  mongo.py  postgres.py
project send/backend/app/llm/: client.py  config.py  prompts.py
project send/backend/app/users/: models.py
project send/backend/app/vacancies/: models.py  questions_models.py
project send/backend/tests/: conftest.py  test_auth.py  test_chat.py  test_chat_limits.py  test_chat_utils.py  test_health.py  test_jwt.py  test_passwords.py  test_security.py
project send/frontend/: package-lock.json
project send/frontend/src/: auth.css  background.css  chat.css  index.css  main.tsx
src/back/: main.py
src/back/config/: security.py
src/back/database/: database.py
tests/: conftest.py  test_auth_schemes.py  test_auth_service.py  test_encryption.py  test_password_service.py  test_user_auth.py  test_user_repo.py
(+19 files in other folders)
