[tool.poetry]
name = "interview-trainer"
version = "0.1.0"
description = "LLM-based IT interview training service"
authors = ["team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }

pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"

sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
alembic = "^1.13.1"

motor = "^3.4.0"

python-jose = "^3.3.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

httpx = "^0.27.0"

python-dotenv = "^1.0.1"
greenlet = "^3.3.0"
psycopg2-binary = "^2.9.11"
argon2-cffi = "^25.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
coverage = "^7.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"